# optimistic

./: .gitignore  README.md  db.py  mypy.ini  requirements.txt  sample.ini
.github/workflows/: backend.yml  frontend.yml  main.yml
Backend/: Dockerfile  Dockerfile.bak  Main.py  README.md  db.py  helper.py  imageGenerator.py  pyproject.toml  requirements.txt
Backend/backend/: auth.py  comic_ai_manager.py  db.py  gemini_ai_manager.py  helper.py  main.py  model.py  mongo_db.py  open_ai_manager.py  pexels_manager.py  postgres_sql_db.py  sqlite_db_manager.py  test_main.py  voice_over_manager.py
Backend/backend/db/: base.py  event.py  planet.py  sql_model.py  user.py  vote.py
Backend/docker/: Dockerfile
Backend/infra/: deployment.yaml
Frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  requirements.txt  tsconfig.json  vite-env.d.ts  vitest.config.ts
Frontend/LocalPackage/react-archer-feature-react-19-migration/: tsconfig.build.json  tsconfig.json
Frontend/LocalPackage/react-archer-feature-react-19-migration/.circleci/: config.yml
Frontend/src/: App.jsx  AxiosManager.jsx  AxiosManager.tsx  Helper.jsx  Helper.tsx  global.d.ts  helper.test.ts  main.jsx  main.tsx
Frontend/src/components/: ArrowOverlay.tsx  DateGroup.tsx  EventToVote.jsx  HistoryPart.jsx  OpEvent.jsx  OpEvent.tsx  OpEventToVoteOn.jsx  OpEventToVoteOn.tsx  OpWinnerEvent.jsx  OpWinnerEvent.tsx  Planet.jsx  Planet.tsx  WinnerFlowNode.tsx  WinnerPart.jsx
Frontend/src/css/: App.css  mystyle.module.css
Frontend/src/pages/: History.jsx  History.tsx  HomePage.jsx  HomePage.tsx  Layout.jsx  PlanetPage.jsx  PlanetPage.tsx  SummaryPage.jsx  ToVotePage.jsx  ToVotePage.tsx  WinnersPage.jsx  WinnersPage.tsx
Frontend/src/types/: DataTypes.ts  DataTypes.tsx  assets.d.ts
(+5 files in other folders)
